<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
   android:background="@drawable/scenery2"
    tools:context=".Question1Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="@string/question_number"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textAlignment="center"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_question"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textAlignment="center"
    />

    <Button
        android:id="@+id/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:layout_margin="10dp"
    />

    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:layout_margin="10dp"
    />

    <Button
        android:id="@+id/Button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3"
        android:layout_margin="10dp"
    />







</LinearLayout>